# corylus-pos

./: .gitignore  Cargo.toml
scripts/: build_es_model.py  build_model.py
src/: error.rs  heuristic.rs  lib.rs  perceptron.rs  provision.rs  state.rs  tests.rs  tokenizer.rs  upos.rs
